--- a/src/components/css/Lalo.css
+++ b/src/components/css/Lalo.css
@@ -20,12 +20,17 @@
 }
 .closest{
     color:#fff;
-    rotate: 45deg;
     font-size: 2em;
     border-radius: 50%;
+    width:30px;
+    height:30px;
     cursor:pointer;
     position:absolute;
     
+}
+.closest svg{
+    width:30px;
+    height:30px;
 }
 @media screen and (min-width:1000px){
     .closest{
