--- a/src/components/css/act.css
+++ b/src/components/css/act.css
@@ -34,10 +34,49 @@
 
 .act-item{
     width:80vw;
-    border-radius:20px;
-    background-size: cover;
-    overflow:hidden;
+    min-height:500px;
     margin:auto;
+    width:80vw;
+    min-width: 600px;
+    border-radius:10px;
+    overflow:hidden;
+}
+.act-item .text{
+    padding-top: 70px;
+    padding-bottom: 60px;
+    background: rgb(78,9,149);
+    background: linear-gradient(0deg, rgba(78,9,149,1) 0%, rgba(64,41,144,1) 35%, #020825 100%);
+    height: 100%;
+    margin-top:-50px;
+    width:100%;
+    border-radius:10px;
+    overflow:hidden;
+    
+}
+.act-main-image{
+    width:100%;
+    min-height:300px;
+    margin-bottom: -10px;
+}
+.images-sub{
+    z-index: 10000;
+    width:100%;
+    height:100px;
+    display:flex;
+    margin-top:-50px;
+    flex-direction:row;
+    justify-content: space-around;
+    flex-wrap:wrap;
+    z-index: 1000;
+}
+@media screen and (max-width:600px){
+    .act-item{
+        min-width:85vw;
+        padding:10px;
+    }
+    .images-sub{
+        margin-top: -100px;
+    }
 }
 @media screen and (min-width:800px){
     .act-item{
@@ -62,10 +101,48 @@
     height: 70%;
     margin-top:30%;
     padding-bottom:20px;
+    
 }
 .Text p{
     background-color: transparent;
     padding-bottom:20px;
     padding-left: 20px;
     padding-right: 20px;
+}
+.price-per{
+    width:15vw;
+    height:15vw;
+    border-radius:50%;
+    background-color: #ff66ff;
+}
+.act-per{
+    width:15vw;
+    height:15vw;
+    text-align: center;
+    vertical-align: middle;
+}
+@media screen and (min-width:1000px){
+    .act-per{
+        width:75px;
+        height:75px;
+    }
+    .price-per{
+        width:75px;
+        height:75px;
+        border-radius:50%;
+        background-color: #ff66ff;
+    }
+}
+.price-per h5{
+    margin-top:30px;
+    font-size: 80%;
+    font-weight: bolder;
+}
+@media screen and (max-width:300px){
+    .price-per h5{
+        margin-top:30px;
+        font-size: 50%;
+        font-weight: bolder;
+        margin-top: 10px;
+    }
 }
